# mofo

./: README.md
contracts/hello_world/: Cargo.toml
contracts/hello_world/src/: lib.rs
